# TerraSeg

./: README.md
OmniLiDAR_scripts/: README.md  dataset_converter__AevaScenes.py  dataset_converter__Argoverse2Lidar.py  dataset_converter__KITTI360.py  dataset_converter__Lyft.py  dataset_converter__ONCE.py  dataset_converter__PandaSet.py  dataset_converter__SemanticKITTI.py  dataset_converter__TruckScenes.py  dataset_converter__ViewOfDelft.py  dataset_converter__WaymoPerception.py  dataset_converter__Zenseact.py  dataset_converter__nuScenes.py  pyproject.toml
